terraform/modules/neuroai/yaml/istio/istio41.yaml
apiVersion: v1
kind: Service
metadata:
  name: istiod
  namespace: istio-system
  labels:
    istio.io/rev: default
    install.operator.istio.io/owning-resource: unknown
    operator.istio.io/component: Pilot
    app: istiod
    istio: pilot
    release: istio
spec:
  ports:
    - port: 15010
      name: grpc-xds
      protocol: TCP
    - port: 15012
      name: https-dns
      protocol: TCP
    - port: 443
      name: https-webhook
      targetPort: 15017
      protocol: TCP
    - port: 15014
      name: http-monitoring
      protocol: TCP
  selector:
    app: istiod
    istio: pilot
