terraform/modules/neuroai/yaml/istio/istio46.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: istio-validator-istio-system
  labels:
    app: istiod
    release: istio
    istio: istiod
    istio.io/rev: default
webhooks:
  - name: rev.validation.istio.io
    clientConfig:
      service:
        name: istiod
        namespace: istio-system
        path: /validate
      caBundle: ""
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - security.istio.io
          - networking.istio.io
          - telemetry.istio.io
          - extensions.istio.io
        apiVersions:
          - '*'
        resources:
          - '*'
    failurePolicy: Ignore
    sideEffects: None
    admissionReviewVersions:
      - v1beta1
      - v1
    objectSelector:
      matchExpressions:
        - key: istio.io/rev
          operator: In
          values:
            - default
